--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -142,3 +142,12 @@
   a:hover {
     text-decoration: none;
   }
+
+  .archive img {
+    display: block;
+    max-width:230px;
+    max-height:95px;
+    width: auto;
+    height: auto;
+    padding: 0;
+  }
