Trying something different with IMG display.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -144,7 +144,7 @@
   }
 
   .archive img {
-    display: block;
+    display: inline-block;
     max-width:500px;
     max-height:500px;
     width: auto;
