Trying to get the images to display as individual squares.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -144,10 +144,6 @@
   }
 
   .archive img {
-    display: inline-block;
-    max-width:500px;
-    max-height:500px;
-    width: auto;
-    height: auto;
+    display: block;
     padding: 0;
   }
