Not all blog posts are showing up. Trying to fix.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -155,3 +155,6 @@
     object-fit: cover; /* Ensures the image fills the container while maintaining its aspect ratio */
     display: block;
   }
+  .img-archive ul {
+    list-style: none;
+  }
