--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -1,4 +1,4 @@
 <a href="/">Home</a>
 <a href="/about/">About</a>
-<a href="/blog/">Archive</a>
 <a href="/contact/">Contact</a>
+<a href="/changelog/">Changelog</a>
