--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -191,3 +191,9 @@
     background: rgb(46, 46, 51);
     color: #d5d5d6;
   }
+  .icon {
+    display: inline-block;
+    margin-left: 0.2em;
+    width: 1em;
+    height: 1em;
+  }
