--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -133,6 +133,11 @@
     }
   }
   
+  /* Lazy loading for mobile */
+  img {
+    loading="lazy"; !important 
+  }
+  
   /* Format links */
   a,
   a:visited {
