--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="{{ title or metadata.title }}" />
+    <meta name="title" content="{{ title or metadata.title }} | Photos by Stephen Gower" />
     <meta name="description" content="{{ meta_description or metadata.description }}" />
     <link rel="canonical" content="{{ canonical_url }}" />
     <meta name="author" content="Stephen Gower" />
@@ -16,7 +16,7 @@
     <meta name="fediverse:creator" content="@srgower@ottawa.place" />
 
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>{{ title }}</title>
+    <title>{{ title }} | Photos by Stephen Gower</title>
   </head>
   <body>
     <header>{% include 'header.njk' %} </header>
