--- a/src/_includes/blog.njk
+++ b/src/_includes/blog.njk
@@ -17,5 +17,5 @@ layout: base.njk
 <h2>{{ title }}</h2>
 <time> <em> {{ date | readableDate}} </em> </time>
 <article>{{ content | safe}}</article>
-<a href=".."><strong>Return to grid</strong></a>
+<a href="/"><strong>Return to grid</strong></a>
 
