Fixed title in feed.njk to match site title

--- a/src/feed.njk
+++ b/src/feed.njk
@@ -3,8 +3,8 @@
   "permalink": "feed.xml",
   "eleventyExcludeFromCollections": true,
   "metadata": {
-    "title": "Stephen Gower's Photo Blog",
-    "subtitle": "Posts sharing my photographic hobby.",
+    "title": "Photos by Stephen Gower",
+    "subtitle": "Sharing my photographic hobby.",
     "url": "https://photos.srgower.com/",
     "feedUrl": "https://photos.srgower.com/feed.xml",
     "author": {
