Forgot ".data" in <summary> field.

--- a/src/feed.njk
+++ b/src/feed.njk
@@ -33,7 +33,7 @@
     <link href="{{ absolutePostUrl }}"/>
     <updated>{{ post.date | dateToRfc3339 }}</updated>
     <id>{{ absolutePostUrl }}</id>
-    <summary>{{ post.meta_description }}</summary>
+    <summary>{{ post.data.meta_description }}</summary>
     <content type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
   </entry>
   {%- endfor %}
