Added favicon + logo
Added a logo to meta image & favicon. Deleted a placeholder image as well. Updated base.njk & index.html to incorporate new images.

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" href="/css/styles.css" />
     <title>{{ title }} | Photos by Stephen Gower</title>
+    <link rel="icon" type="image/x-icon" href="/img/icons/favicon.ico">
   </head>
   <body>
     <header>{% include 'header.njk' %} </header>
