Added site logo
Added site logo to header. Updated changelog.

--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,1 +1,4 @@
-<h1>Photos by Stephen Gower</h1>
+<h1 style="vertical-align:middle;">
+Photos by Stephen Gower
+<img src="/img/sgp-logo.jpg" style="width:10%; height:10%; display:inline-block; border-radius:50%; vertical-align: middle;" alt="The logo for Photos by Stephen Gower"/>
+</h1>
