--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,1 +1,1 @@
-<p>Photos & content &copy; 2024 <a href="https://srgower.com">Stephen Gower</a>.</p>
+<p>Photos & content &copy; 2024 <a href="https://srgower.com">Stephen Gower</a>.</p> &#x2022; <a rel="me" href="https://ottawa.place/@srgower">Mastodon</a>
