Made Mastodon text invisible

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,1 +1,1 @@
-<p>Photos & content &copy; 2024 <a href="https://srgower.com">Stephen Gower</a>.</p> &#9679; <a rel="me" href="https://ottawa.place/@srgower">Mastodon</a>
+<p>Photos & content &copy; 2024 <a href="https://srgower.com">Stephen Gower</a><span style="color: transparent; user-select: none;">&nbsp;&#x2022;&nbsp;<a rel="me" href="https://ottawa.place/@srgower" style="color: transparent; user-select: none;">Mastodon</a></span></p>
