Added "Share" button
Added a share button to bottom of blog posts + styling to styles.css. Updated changelog.

--- a/src/_includes/blog.njk
+++ b/src/_includes/blog.njk
@@ -18,4 +18,5 @@ layout: base.njk
 <h2>{{ title }}</h2>
 <time> <em> {{ date | readableDate}} </em> </time>
 <article>{{ content | safe}}</article>
+<h6 style="width: 100%;text-align: center;"><a href="https://www.addtoany.com/share#url=https://photos.srgower.com{{ page.url }}&title={{ title }}" target="_blank">Share</a></h6>
 
