--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -245,4 +245,17 @@
     display: inline-block;
   }
 
- 
+ /* Style for share button */
+ h6 {
+  margin-top: 4em;
+  margin-bottom: 0;
+} 
+  
+h6 a {
+  cursor: pointer;
+  border: 2px solid #222;
+  padding: 5px 10px; 
+  background-color: var(--accent-bg);
+  text-decoration: none;
+  color: var(--accent);
+}
