Switched "post" back to "blog"
Thought "blog" was a better tag than "post" to use. Updated all collections.

--- a/src/_includes/blog.njk
+++ b/src/_includes/blog.njk
@@ -19,7 +19,7 @@ layout: base.njk
 <time> <em> {{ date | readableDate}} </em> </time>
 <p>
 {% for tag in tags -%}
-  {% if tag !== 'post' %}
+  {% if tag !== 'blog' %}
  <span class="tag">#{{ tag }}</span> 
   {% endif %}
 {%- endfor %}
