--- a/src/_includes/blog.njk
+++ b/src/_includes/blog.njk
@@ -2,28 +2,30 @@
 layout: base.njk
 ---
 
+<div class="post-nav">
 {% if prevPost.url %}
-		<p class="ctr">
+		<p>
 			<strong>Previous</strong>:
 			<a class="previous" href="{{ prevPost.url }}">{{ prevPost.data.title }}</a>
 		</p>
 	{% endif %}
 	{% if nextPost.url %}
-		<p class="ctr">
+		<p>
 			<strong>Next</strong>:
 			<a class="next" href="{{ nextPost.url }}">{{ nextPost.data.title }}</a>
 		</p>
 	{% endif %}
-<a href="/"><strong>Return to grid</strong></a>
+<a href="/">Return to grid</a>
+</div>
 <h2>{{ title }}</h2>
-<time> <em> {{ date | readableDate}} </em> </time>
+<time><em>{{ date | readableDate}}</em></time>
 <p>
 {% for tag in tags -%}
   {% if tag !== 'blog' %}
- <span class="tag">#{{ tag }}</span> 
+ <span class="tag"><a href="/tags/{{ tag }}/">#{{ tag }}</a></span>&nbsp;&nbsp;
   {% endif %}
 {%- endfor %}
 </p>
 <article>{{ content | safe}}</article>
-<h6 style="width: 100%;text-align: center;"><a href="https://www.addtoany.com/share#url=https://photos.srgower.com{{ page.url }}&title={{ title }}" target="_blank">Share</a></h6>
+<span class="share"><p><a href="https://www.addtoany.com/share#url=https://photos.srgower.com{{ page.url }}&title={{ title }}" target="_blank">Share this post</a></p></span>
 
