--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -1,4 +1,6 @@
 <a href="/">Home</a>
+<a href="/archive/">Archive</a>
+<a href="/tags/">Tags</a>
 <a href="/about/">About</a>
 <a href="/contact/">Contact</a>
 <a href="/changelog/">Changelog</a>
