--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -66,6 +66,7 @@
     line-height: 2;
     padding: 1rem 0;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -76,6 +77,7 @@
     margin: 1rem 1rem 0 0;
     color: var(--text) !important;
     padding: 0.1rem 1rem;
+    white-space: nowrap;
   }
   
   nav a:hover {
@@ -94,6 +96,7 @@
       color: var(--accent);
       text-decoration: underline;
       line-height: 1;
+      white-space: normal;
     }
   }
   
@@ -218,9 +221,9 @@
   }
   .icon {
     display: inline-block;
-    margin-left: 0.2em;
-    width: 1em;
-    height: 1em;
+    margin-left: 0.1em;
+    width: 0.5em;
+    height: 0.5em;
   }
 
   /* Styling for archive page */ 
@@ -246,23 +249,52 @@
   }
 
  /* Style for share button */
- h6 {
+ .share {
   margin-top: 4em;
   margin-bottom: 0;
+  width: 100%;
+  font-size: 0.85em;
+  vertical-align: middle;
 } 
   
-h6 a {
+.share a {
   cursor: pointer;
   border: 2px solid #222;
-  padding: 5px 10px; 
+  padding: 5px 10px;
+  margin-bottom: 5px; 
   background-color: var(--accent-bg);
   text-decoration: none;
   color: var(--accent);
+  vertical-align: middle;
 }
 
-/* Format tags */
+/* Format tags on blog posts */
 .tag {
+  font-size: 1em;
+}
+
+/* Tag cloud */ 
+.tag-cloud {
+  display: inline-block;
+  padding: 0px 5px;
+  font-family: sans-serif;
+  border-radius: 5px;
+  background-color: var(--border);
+  margin-top: 6px;
+}
+.tag-cloud a {
   color: var(--accent);
-  user-select: none;
-  font-size: 0.75em;
+  text-decoration: none;
+}
+
+/* Tighten H2 tag for blog titles */
+h2 {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+/* Tighten prev/next post spacing */
+.post-nav {
+  margin-bottom: 0;
+  margin-top: 0;
 }
