Created new subscription page to acommodate email sign-up.

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -21,7 +21,9 @@
     <meta property="twitter:description" content="{{ meta_description }}" />
 
     <meta name="fediverse:creator" content="@srgower@ottawa.place" />
-
+    
+    <meta name="follow.it-verification-code" content="1tBjAmSwwLU95HLwnG1M"/>
+    
     <link rel="stylesheet" href="/css/styles.css" />
     <title>{{ title }} | Photos by Stephen Gower</title>
     <link rel="icon" type="image/x-icon" href="/img/icons/favicon.ico">
