--- a/src/_includes/navigation.njk
+++ b/src/_includes/navigation.njk
@@ -4,4 +4,4 @@
 <a href="/about/">About</a>
 <a href="/contact/">Contact</a>
 <a href="/changelog/">Changelog</a>
-<a href="/feed.xml">Subscribe<img class="icon" src="/img/icons/rss.png" alt="RSS Logo"/></a>
+<a href="/subscribe/">Subscribe</a>
