Made small changes to archive & tags pages - positioning of links and titles, plus wording of links. Both pages follow same design language. Adjusted icon sizing style.

--- a/src/tags.njk
+++ b/src/tags.njk
@@ -4,8 +4,9 @@ layout: base
 permalink: /tags/
 ---
 
-<p><a href="/archive/">Return to Archive</a> &#8226; <a href="..">Return Home</a></p>
-<h3>All tags</h3>
+<h2>All Tags</h2>
+<p><a href="/archive/">View all posts</a> &#8226; <a href="..">Return home</a></p>
+
 
 {% for tag in collections.tagsList %}
   <span class="tag-cloud"><a href="/tags/{{tag}}">#{{tag}}</a></span>
