Updated styles and changelog
Moved changelog link from main nav to footer; styled tags within posts to match all tags page.

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,1 +1,2 @@
-<p>Photos & content &copy; 2024 <a href="https://srgower.com">Stephen Gower</a><a rel="me" href="https://ottawa.place/@srgower" style="color: transparent; user-select: none;">Mastodon</a></p>
+<p>Photos & content &copy; 2024 <a href="https://srgower.com">Stephen Gower</a> &#8226; <a href="/changelog/">Changelog</a>
+<p><a rel="me" href="https://ottawa.place/@srgower" style="color: transparent; user-select: none;">Mastodon</a></p>
