--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,2 +1,3 @@
 <p>Photos & content &copy; 2024 <a href="https://srgower.com">Stephen Gower</a> &#8226; <a href="/changelog/">Changelog</a>
 <p><a rel="me" href="https://ottawa.place/@srgower" style="color: transparent; user-select: none;">Mastodon</a></p>
+ <script src="https://tinylytics.app/embed/QyGTesbiAQes67H_v-mF.js" defer></script> 
