Created new post
New post ("Framed!"), adjusted blog.njk to add some separation between post and share button.

--- a/src/_includes/blog.njk
+++ b/src/_includes/blog.njk
@@ -27,6 +27,6 @@ layout: base.njk
 {%- endfor %}
 </p>
 <article>{{ content | safe}}</article>
-<span class="share"><p><a href="https://www.addtoany.com/share#url=https://photos.srgower.com{{ page.url }}&title={{ title }}" target="_blank">Share this post</a></p></span>
+<br/><span class="share"><p><a href="https://www.addtoany.com/share#url=https://photos.srgower.com{{ page.url }}&title={{ title }}" target="_blank">Share this post</a></p></span>
 <!-- <span class="share"><p><a href="https://follow.it/photos-by-stephen-gower?leanpub">Follow via email</a></p></span> -->
 
