--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -19,6 +19,7 @@
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="{{ title }}" />
     <meta property="twitter:description" content="{{ meta_description }}" />
+    <meta property="twitter:image" content="{{ meta_image }}" />
 
     <meta name="fediverse:creator" content="@srgower@ottawa.place" />
     
